# pasantia-codere

./: .agentignore  .aiignore  .cursorrules  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  .secrets.baseline  AGENTS.md  ESTRUCTURA.txt  Generar_Reporte.bat  INICIO.py  INICIO_RAPIDO.txt  Iniciar_Agente.bat  Iniciar_TODO.bat  Instalar.bat  Instalar_v2.bat  README.md  agent_servidor.py  build_all.py  build_nuitka.py  cliente_central.py  config_ejemplo.json  instalar.py  pyproject.toml  requirements.txt  scanner_red.py  simulador_demo.py  update_ai_knowledge.py  verificador.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release.yml
agente/: .agent_id  agent_config.example.json  agent_config.json  agente.py  deploy_agente_gpo.ps1  instalar_servicio.ps1
dashboard/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
dashboard/src/: App.css  App.jsx  index.css
dashboard/src/__tests__/: PCCard.test.jsx
dashboard/src/components/: AlertToast.jsx  ExportModal.jsx  Header.jsx  Icons.jsx  MetricsChart.jsx  PCCard.jsx  PCGrid.jsx  PCModal.jsx  RegisterModal.jsx  ScanModal.jsx  Sidebar.jsx  Toast.jsx
docs/: ai_context_dump.md  arquitectura.md  deployment.md  troubleshooting.md
scripts/: generar_excel.py  make_icon.py
servidor/: __init__.py  config.py  database.py  generar_excel_logic.py  main.py  monitor.db-shm  monitor.db-wal  notificaciones.py  requirements.txt  scheduler.py
tests/: conftest.py  test_agente.py  test_api_agent.py  test_api_pcs.py  test_server_helpers.py
