[project]
name = "pc-monitor"
version = "2.0.0"
description = "Enterprise PC monitoring system — real-time, WebSocket-first, 200+ nodes"
authors = [
    { name = "Matias", email = "matias@example.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

# ─────────────────────────────────────
#  DEPENDENCIAS DE PRODUCCION
# ─────────────────────────────────────
dependencies = [
    # Servidor central
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "apscheduler>=3.10.0",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.0",
    "openpyxl>=3.1.0",
    "plyer>=2.1.0",
    # Agente
    "psutil>=5.9.0",
    # Config
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
]

# ─────────────────────────────────────
#  DEPENDENCIAS DE DESARROLLO
# ─────────────────────────────────────
[project.optional-dependencies]
dev = [
    # Linting y formato (reemplaza flake8 + isort + black en uno)
    "ruff>=0.4.0",
    # Type checking
    "mypy>=1.8.0",
    "types-requests>=2.31.0",
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",           # cliente HTTP async para tests de FastAPI
    # Pre-commit
    "pre-commit>=3.7.0",
    # Security audit
    "pip-audit>=2.7.0",
    # Build (empaquetar como .exe)
    "pyinstaller>=6.5.0",
]

# ─────────────────────────────────────
#  RUFF — Linter + Formatter
# ─────────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 100
src = ["agente", "servidor", "tests"]
output-format = "concise"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear (bugs comunes)
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade (modernizar sintaxis)
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "ANN",  # flake8-annotations (type hints)
    "S",    # bandit (seguridad)
]
ignore = [
    "E501",    # line too long
    "SIM105",  # Use contextlib.suppress
    "E722",    # Bare except
    "B008",    # FastAPI Depends()
    "SIM115",  # Open without context manager
    "SIM108",  # Use ternary operator
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "S"]
"servidor/main.py" = ["ANN"]
"build/**" = ["S603", "S607"]
"build_all.py" = ["S603", "S607"]
"agente/**" = ["S105"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# ─────────────────────────────────────
#  MYPY — Type Checking
# ─────────────────────────────────────
[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = false
ignore_missing_imports = true
exclude = ["tests/", "build/"]

# ─────────────────────────────────────
#  PYTEST
# ─────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--cov=servidor",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "-v",
]

# ─────────────────────────────────────
#  COVERAGE
# ─────────────────────────────────────
[tool.coverage.run]
omit = ["tests/*", "build/*", "*/migrations/*", "servidor/main.py"]

[tool.coverage.report]
fail_under = 60
show_missing = true
